<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000">

    <TextView
        android:id="@+id/deleteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:textAlignment="center"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:text="@string/yes"
        android:textColor="@color/white"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteText" />

    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:text="@string/no"
        android:textColor="@android:color/white"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteText" />

</androidx.constraintlayout.widget.ConstraintLayout>