<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:text="@string/diary_month"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageButton
            android:id="@+id/delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@id/constraint"
            app:layout_constraintEnd_toEndOf="@id/constraint"
            app:layout_constraintTop_toTopOf="@id/constraint"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:contentDescription="@string/remove" />

        <Button
            android:id="@+id/backButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="5dp"
            android:gravity="start|top"
            android:text="@string/prev"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/load" />
    </androidx.cardview.widget.CardView>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintDimensionRatio="10:8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/diary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:errorEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/diaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/edit"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:text="@string/edit"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/save"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:enabled="false"
        android:text="@string/save"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>